[package]
name = "actuate"
version = "0.16.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A reactive user-interface framework"
repository = "https://github.com/actuate-rs/actuate"

[features]
animation = ["ecs", "dep:bevy_math", "dep:bevy_time", "dep:tokio"]
ecs = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_hierarchy", "dep:bevy_utils"]
executor = ["std", "dep:tokio"]
rt = ["executor", "tokio/rt-multi-thread"]
std = []
tracing = ["dep:tracing"]
full = ["animation", "ecs", "rt", "tracing"]
default = ["std"]

[workspace]
members = [
    ".",
    "macros"
]

[dependencies]
actuate-macros = { version = "0.2.0", path = "macros" }
ahash = { version = "0.8.11", default-features = false }
bevy_app = { version = "0.15.0", optional = true }
bevy_ecs = { version = "0.15.0", optional = true }
bevy_hierarchy = { version = "0.15.0", optional = true }
bevy_math = { version = "0.15.0", optional = true }
bevy_time = { version = "0.15.0", optional = true }
bevy_utils = { version = "0.15.0", optional = true }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
futures = "0.3.31"
hashbrown = "0.15.2"
slotmap = "1.0.7"
thiserror = "2.0.3"
tracing = { version = "0.1.40", optional = true }
tokio = { version = "1.41.1", features = ["sync"], optional = true }
typeid = "1.0.2"

[dev-dependencies]
bevy = { version = "0.15.0" }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tracing-subscriber = "0.3.18"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "composer"
path = "examples/core/composer.rs"

[[example]]
name = "dynamic"
path = "examples/core/dynamic.rs"

[[example]]
name = "error_handling"
path = "examples/core/error_handling.rs"

[[example]]
name = "traits"
path = "examples/core/traits.rs"

[[example]]
name = "counter"
path = "examples/ecs/counter.rs"
required-features = ["ecs"]

[[example]]
name = "http"
path = "examples/ecs/http.rs"
required-features = ["ecs", "rt"]

[[example]]
name = "timer"
path = "examples/ecs/timer.rs"
required-features = ["ecs"]
