[package]
name = "actuate"
version = "0.17.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A reactive user-interface framework"
repository = "https://github.com/actuate-rs/actuate"

[features]
animation = ["ecs", "dep:bevy_math", "dep:bevy_time", "dep:tokio"]
ecs = ["std", "dep:bevy_app", "dep:bevy_ecs", "dep:bevy_hierarchy", "dep:bevy_utils", "dep:bevy_winit"]
executor = ["std", "dep:tokio"]
material = ["ui", "ecs", "picking", "dep:bevy_color", "dep:bevy_input", "dep:bevy_text"]
picking = ["dep:bevy_picking"]
rt = ["executor", "tokio/rt-multi-thread"]
std = []
tracing = ["dep:tracing"]
ui = ["dep:bevy_ui"]
full = ["animation", "ecs", "material", "rt", "tracing"]
default = ["std"]

[workspace]
members = [
    ".",
    "macros"
]

[dependencies]
actuate-macros = { version = "0.2.0", path = "macros" }
ahash = { version = "0.8.11", default-features = false }
bevy_app = { version = "0.15.0", optional = true }
bevy_color = { version = "0.15.0", optional = true }
bevy_ecs = { version = "0.15.0", optional = true }
bevy_hierarchy = { version = "0.15.0", optional = true }
bevy_input = { version = "0.15.0", optional = true }
bevy_math = { version = "0.15.0", optional = true }
bevy_picking = { version = "0.15.0", optional = true }
bevy_text = { version = "0.15.0", optional = true }
bevy_time = { version = "0.15.0", optional = true }
bevy_ui = { version = "0.15.0", optional = true }
bevy_utils = { version = "0.15.0", optional = true }
bevy_winit = { version = "0.15.0", optional = true }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
futures = "0.3.31"
hashbrown = "0.15.2"
slotmap = "1.0.7"
thiserror = "2.0.3"
tracing = { version = "0.1.40", optional = true }
tokio = { version = "1.41.1", features = ["sync"], optional = true }
typeid = "1.0.2"

[dev-dependencies]
bevy = { version = "0.15.0" }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tracing-subscriber = "0.3.18"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "counter"
required-features = ["material"]

[[example]]
name = "http"
required-features = ["material", "rt"]

[[example]]
name = "radio_button"
required-features = ["material"]

[[example]]
name = "timer"
required-features = ["ecs"]
