[package]
name = "actuate-winit"
version = "0.1.5"
edition = "2021"
description = "Winit window bindings for Actuate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/actuate-rs/actuate"

[features]
tracing = ["dep:tracing"]
default = ["tracing"]

[dependencies]
actuate-core = { version = "0.4.0", path = "../actuate-core" }
tracing = { version = "0.1.40", optional = true }
tokio = { version = "1.41.1", features = ["full"] }
winit = "0.30.5"

[dev-dependencies]
tracing-subscriber = "0.3.18"
